Login + refreshToken + authorization added on delete route

--- a/src/Minimal.API/appsettings.Development.json
+++ b/src/Minimal.API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "SecretKey": "sua-chave-super-secreta-para-jwt",
+    "Issuer": "MinimalApiJwt",
+    "Audience": "MinimalApiJwt",
+    "ExpirationTimeInMinutes": "1",
+    "RefreshExpirationTimeInMinutes": "10"
   }
 }
