--- a/src/Minimal.API/appsettings.json
+++ b/src/Minimal.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "sua-chave-super-secreta-para-jwt",
+    "Issuer": "MinimalApiJwt",
+    "Audience": "MinimalApiJwt",
+    "ExpirationTimeInMinutes": "1",
+    "RefreshExpirationTimeInMinutes": "10"
+  }
 }
